Fixed success story images squishing.

--- a/src/shared/components/imageListItem/imageListItem.css
+++ b/src/shared/components/imageListItem/imageListItem.css
@@ -15,6 +15,7 @@
   max-width: 150px;
   height: 150px;
   max-height: 150px;
+  flex: 1 0 auto;
 }
 
 .cardText {
